--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -29,8 +29,16 @@ jobs:
       with:
         terraform_version: "1.1.7"
 
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    
     - name: Terraform init
       run: terraform init
+      working-directory: terraform/
 
     - name: Terraform apply
       run: terraform apply -auto-approve
+      working-directory: terraform/
