--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,40 +5,57 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.21'
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.21"
 
-    - name: Build
-      run: GOOS=linux GOARCH=amd64 go build -o deployment *.go
+      - name: Build
+        run: GOOS=linux GOARCH=amd64 go build -o main *.go
 
-    - name: Zip
-      run: zip deployment.zip deployment
+      - name: Zip
+        run: zip ./terraform/main.zip main
 
-    - name: Set up Terrform
-      uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: "1.1.7"
+      - name: Upload zip file
+        uses: actions/upload-artifact@v3
+        with:
+          name: main
+          path: ./terraform
+
+      - name: Set up Terrform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: "1.1.7"
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Terraform init
-      run: terraform init
-      working-directory: terraform/
+      - uses: actions/checkout@v3
 
-    - name: Terraform apply
-      run: terraform apply -auto-approve
-      working-directory: terraform/
+      - name: Download zip file
+        uses: actions/download-artifact@v3
+        with:
+          name: main
+          path: ./terraform
+
+      - name: Show current directory files
+        run: ls -ll
+
+      - name: Terraform init & apply
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          ls -ll
+          terraform init
+          terraform apply -auto-approve
+        working-directory: terraform/
