--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,6 +5,19 @@ on:
     branches: ["main"]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: "1.21"
+
+      - name: Run Test
+        run: go test ./test -v
+
   build:
     runs-on: ubuntu-latest
     steps:
