--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,7 +16,7 @@ jobs:
           go-version: "1.21"
 
       - name: Run Test
-        run: go test ./test -v
+        run: go test ./... -v
 
   build:
     needs: test
